--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-form-components",
+  "name": "@pascalallen/react-form-components",
   "version": "1.0.0",
   "description": "Simple HTML form elements made for React.",
   "scripts": {
