--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pascalallen/react-form-components",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Simple HTML form elements made for React.",
   "scripts": {
     "test": "jest",
@@ -28,18 +28,15 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.4.1",
-    "react": "^17.0.2"
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
   },
   "devDependencies": {
-    "@types/classnames": "^2.3.1",
     "@types/enzyme": "^3.10.10",
-    "@types/react": "^17.0.34",
+    "@types/react": "^18.0.8",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
-    "enzyme": "^3.11.0",
-    "enzyme-to-json": "^3.6.2",
     "eslint-plugin-react": "^7.26.1",
-    "ts-jest": "^27.0.7"
+    "ts-jest": "^28.0.0"
   }
 }
