update build configuration, update README.md, add app.scss to distributed files

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
-/build/
+# vendor
 /node_modules/
+
+# logs
 npm-debug.log
 yarn-error.log
+
+# IDE
 /.idea
+/*.sublime-project
+/*.sublime-workspace
+
+# misc
+dist
+.DS_Store
