--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "@pascalallen/react-form-components",
   "version": "2.0.2",
   "description": "Simple HTML form elements made for React.",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
+    "clean": "rm -rf dist",
+    "ci": "yarn install --frozen-lockfile",
+    "build": "tsc && tsc-alias && cp src/app.scss dist/app.scss",
     "test": "jest",
     "lint": "eslint './src/**/*.{ts,tsx}'",
     "lint:fix": "eslint './src/**/*.{ts,tsx}' --fix"
@@ -12,11 +17,11 @@
     "url": "git+https://github.com/pascalallen/react-form-components.git"
   },
   "keywords": [
-    "Fields",
-    "Forms",
-    "Inputs",
-    "React",
-    "Bootstrap"
+    "fields",
+    "forms",
+    "inputs",
+    "react",
+    "bootstrap"
   ],
   "author": "Pascal Allen <pascal.allen88@gmail.com> (https://github.com/pascalallen)",
   "license": "ISC",
@@ -24,21 +29,30 @@
     "url": "https://github.com/pascalallen/react-form-components/issues"
   },
   "homepage": "https://github.com/pascalallen/react-form-components#readme",
+  "peerDependencies": {
+    "react": "^18.1.0"
+  },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.4.1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "prettier": "^2.4.1"
   },
   "devDependencies": {
-    "@types/enzyme": "^3.10.10",
     "@types/react": "^18.0.8",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
+    "eslint": "^8.36.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.26.1",
-    "ts-jest": "^29.0.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.5.0",
+    "react": "^18.1.0",
+    "ts-jest": "^29.0.0",
+    "tsc-alias": "^1.8.4",
+    "typescript": "^5.0.2"
   }
 }
