--- a/package.json
+++ b/package.json
@@ -30,29 +30,29 @@
   },
   "homepage": "https://github.com/pascalallen/react-form-components#readme",
   "peerDependencies": {
-    "react": "^18.1.0"
+    "react": "^18.1.0 || ^19.0.0"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.6",
-    "bootstrap": "^5.1.3",
-    "classnames": "^2.3.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.4.1"
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.8",
+    "classnames": "^2.5.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "prettier": "^3.7.4"
   },
   "devDependencies": {
-    "@types/react": "^18.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.3.0",
-    "@typescript-eslint/parser": "^5.3.0",
-    "eslint": "^8.36.0",
-    "eslint-import-resolver-typescript": "^3.5.3",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^29.5.0",
-    "react": "^18.1.0",
-    "ts-jest": "^29.0.0",
-    "tsc-alias": "^1.8.4",
-    "typescript": "^5.0.2"
+    "@types/react": "^19.2.7",
+    "@typescript-eslint/eslint-plugin": "^8.50.1",
+    "@typescript-eslint/parser": "^8.50.1",
+    "eslint": "^8.57.1",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "jest": "^29.7.0",
+    "react": "^19.2.3",
+    "ts-jest": "^29.4.6",
+    "tsc-alias": "^1.8.16",
+    "typescript": "^5.9.3"
   }
 }
